Initial JDK 25 support