@@ -9,11 +9,10 @@
   <properties>
     <dependency.junit.version>6.0.1</dependency.junit.version>
     <dependency.magik-tools.version>0.11.0</dependency.magik-tools.version>
-    <maven.compiler.source>24</maven.compiler.source>
-    <maven.compiler.target>24</maven.compiler.target>
+    <maven.compiler.source>25</maven.compiler.source>
+    <maven.compiler.target>25</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <sonar.java.enablePreview>true</sonar.java.enablePreview>
     <sonar.organization>krn-robin</sonar.organization>
   </properties>
   <dependencies>
@@ -64,23 +63,12 @@
           <version>3.14.1</version>
           <configuration>
             <compilerArgs>
-              <arg>--enable-preview</arg>
-              <arg>-Xlint:all,-preview</arg>
-              <arg>--add-exports</arg>
-              <arg>java.base/jdk.internal.classfile.components=ALL-UNNAMED</arg>
+              <arg>-Xlint:all</arg>
             </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.9.0</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.4</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
           <version>3.1.4</version>
         </plugin>
         <plugin>
@@ -111,7 +99,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.4</version>
           <configuration>
-            <argLine>@{argLine} -Djava.util.logging.config.file=src/test/resources/jul.properties --add-exports java.base/jdk.internal.classfile.components=ALL-UNNAMED --enable-preview</argLine>
+            <argLine>@{argLine} -Djava.util.logging.config.file=src/test/resources/jul.properties</argLine>
           </configuration>
         </plugin>
       </plugins>
@@ -158,6 +146,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.9.0</version>
         <executions>
           <execution>
             <id>copy-dependencies</id>
@@ -177,6 +166,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
+        <version>3.1.4</version>
         <executions>
           <execution>
             <id>install-magik-squid</id>
@@ -264,7 +254,6 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.12.0</version>
         <configuration>
-          <additionalOptions>--enable-preview</additionalOptions>
           <doclint>all,-missing</doclint>
         </configuration>
       </plugin>
